--- a/base-layer.yaml
+++ b/base-layer.yaml
@@ -175,6 +175,7 @@ Resources:
       Runtime: "python3.6"
       Timeout: 10
       Code:
+        # If you include your function source inline with this parameter, AWS CloudFormation places it in a file named index and zips it to create a deployment package.
         ZipFile: |
           import boto3
 
